helm/certs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qwikerp-ingress
  namespace: qwikerp-beta
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.qwikpace.com"
      secretName: qwikerp-scrt
  rules:
    - host: erp-beta.qwikpace.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qwikerp-frontend
                port:
                  number: 3000
